@@ -1,3 +1,6 @@
+Aug 23 2013
+    Open terminal action
+
 Aug 21 2013
     Highlight word under cursor search results with yellow
 
